# Piscine-C-2025

./: .gitignore  CMakeLists.txt  PROGRESSION.md  README.md  identifiants.txt
src/: board.c  config.c  display.c  game.c  local_mode.c  main.c  menu.c  place.c
src/board/: board.c  board.h
src/config/: config.h
src/directory/: display.h
src/game/: game.h
src/include/: board.h  config.h  game.h  local_mode.h  menu.h  place.h
src/include/SDL/lib/cmake/SDL2/: sdl2-config.cmake
